# Walk-of-Cringe

./: .gitignore  CMakeLists.txt  Makefile  README.md  take.cpp  workspace.code-workspace
include/: camera.h  map.h  player.h  utils.h
src/: camera.cpp  main.cpp  map.cpp  player.cpp
